<resources>
    <string name="app_name">My Modules</string>
    <string name="tvc203">C203\nWeb Appln Development\nAnnie Ong</string>
    <string name="btnc203">View Info</string>
    <string name="tvc206">C206\nSoftware Dev Process\nYong Yoke Fong</string>
    <string name="btnc206">View Info</string>
    <string name="tvc235">C235\nIT Security and Management\nHo Chee Wai</string>
    <string name="btnc235">View Info</string>
    <string name="btnc218">View Info</string>
    <string name="tvC218">C218\nUI/UX Design for Apps\nStanley Tan</string>
    <string name="btnc346">View Info</string>
    <string name="btnG953">View Info</string>
    <string name="tvG953">G953\nLife Skills III\nAndrew V</string>
    <string name="tvC346">C346\nMobile App Development\nAndy Tao</string>
    <string name="back">BACK</string>
</resources>